# persegue-idoso

Persegue-Idoso/: .gitignore  CMakeLists.txt  sdkconfig
Persegue-Idoso/main/: CMakeLists.txt  Kconfig.projbuild  hello_world_main.c  main.c  main_Antiga.c  main_antiga_antiga.c
Persegue-Idoso/main/include/acelerometro_modulo/: acelerometro_modulo.c  acelerometro_modulo.h
Persegue-Idoso/main/include/gps_modulo/: gps_modulo.c  gps_modulo.h
Persegue-Idoso/main/include/mqtt_modulo/: mqtt_modulo.c
Persegue-Idoso/main/include/wifi_modulo/: wifi_modulo.c
backend/: .env.dev  README.md  package-lock.json  package.json  swagger.ts  swagger_output.json
backend/src/: app.ts
backend/src/bot/: index.ts  model.ts
backend/src/controllers/: alertaController.ts
backend/src/models/: alertaModel.ts
backend/src/mqtt/: index.ts
backend/src/mqtt/handlers/: gpsHandler.ts  quedaHandler.ts
backend/src/routes/: alertaRoutes.ts  gpsRoutes.ts
backend/src/services/: alertaService.ts
frontend/src/app/: app.html
frontend/src/app/features/avisos/: avisos.ts
frontend/src/app/features/gps_modulo/localizacao-atual/: localizacao-atual.ts
